backend-python/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bsl-backend
  annotations:
    alpha.image.policy.openshift.io/resolve-names: "*"
    image.openshift.io/triggers: >
      [{"from":{"kind":"ImageStreamTag","name":"bsl-backend-service:staging"},"fieldPath":"spec.template.spec.containers[?(@.name==\"bsl-backend\")].image","pause":"false"}]
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bsl-backend
  template:
    metadata:
      labels:
        app: bsl-backend
    spec:
      containers:
        - name: bsl-backend
          image: bsl-backend-service:staging
          ports:
            - containerPort: 8000
