backend-python/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bsl-backend-service
spec:
  selector:
    app: bsl-backend
  ports:
    - port: 8000
      targetPort: 8000
